# assessment_development

./: .gitignore  README.md  TEMPLATE.md  assessment_development_tb.ipr  assessment_development_tb.iws  directories_changed.txt  directories_failed.txt  filenames_changed.txt  filenames_failed.txt
ads/: pps-for-fib-puzzle.md
algorithmic_knowledge/: README.md
android_mobile_knowledge/: README.md  android_mobile_knowledge_q2552.md  android_mobile_knowledge_q2553.md  android_mobile_knowledge_q2559.md  android_mobile_knowledge_q2560.md  android_mobile_knowledge_q2561.md  android_mobile_knowledge_q2562.md  android_mobile_knowledge_q2596.md  android_mobile_knowledge_q2688.md  android_mobile_knowledge_q272.md  android_mobile_knowledge_q2720.md  android_mobile_knowledge_q279.md  android_mobile_knowledge_q2845.md  android_mobile_knowledge_q2869.md  android_mobile_knowledge_q2908.md  android_mobile_knowledge_q2909.md  android_mobile_knowledge_q2910.md  android_mobile_knowledge_q2911.md  android_mobile_knowledge_q2912.md  android_mobile_knowledge_q2913.md  android_mobile_knowledge_q303.md  android_mobile_knowledge_q305.md  android_mobile_knowledge_q306.md  android_mobile_knowledge_q310.md  android_mobile_knowledge_q316.md  android_mobile_knowledge_q399.md  android_mobile_knowledge_q412.md  android_mobile_knowledge_q414.md  android_mobile_knowledge_q540.md
architecture_skill/: README.md
backend/: README.md  backend_q1093.md  backend_q1100.md  backend_q1109.md  (+95 more)
cpp/cpp_q1864/: CMakeLists.txt  README.md  distractor1.cpp  distractor2.cpp  distractor3.cpp  example.cpp  key.cpp
(+2837 files in other folders)
